[gd_scene load_steps=15 format=3 uid="uid://cfuwhh4qgolps"]

[ext_resource type="Script" uid="uid://ctacebenpsrid" path="res://game_hud/hud_score.gd" id="1_rr63v"]
[ext_resource type="Texture2D" uid="uid://dgwee3fovfva5" path="res://game_assets/images/defaults/shield.png" id="2_5ag4x"]
[ext_resource type="FontFile" uid="uid://biryt36b6ciw" path="res://game_assets/fonts/Soccer Scoreboard.otf" id="2_rr63v"]
[ext_resource type="Texture2D" uid="uid://dce5mq42yq8nh" path="res://game_assets/images/flare/arrows_01.png" id="3_fp750"]
[ext_resource type="Texture2D" uid="uid://dhp5o2wqiqg73" path="res://game_assets/images/flare/arrows_02.png" id="4_762ye"]
[ext_resource type="PackedScene" uid="uid://ybgx6eftiul3" path="res://game_hud/scenes/HUD_Timer.tscn" id="4_emhmn"]
[ext_resource type="Texture2D" uid="uid://cvjiiuht1x7rs" path="res://game_assets/images/flare/arrows_03.png" id="5_vychm"]
[ext_resource type="Texture2D" uid="uid://bdfdn4vprfsf" path="res://game_assets/images/flare/arrows_04.png" id="6_4x2ij"]
[ext_resource type="Texture2D" uid="uid://crtorte5btpxt" path="res://game_assets/images/flare/arrows_05.png" id="7_dphoa"]
[ext_resource type="Texture2D" uid="uid://uiabent7rsfr" path="res://game_assets/images/flare/arrows_06.png" id="8_o3f04"]
[ext_resource type="Script" uid="uid://c4oynxp21rq5a" path="res://scripts/fire_ring.gd" id="9_vychm"]
[ext_resource type="Material" uid="uid://b56wor1jylkuc" path="res://game_assets/shaders/fire_ring.tres" id="10_4x2ij"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gdpn7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fp750"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_fp750")
}, {
"duration": 1.0,
"texture": ExtResource("4_762ye")
}, {
"duration": 1.0,
"texture": ExtResource("5_vychm")
}, {
"duration": 1.0,
"texture": ExtResource("6_4x2ij")
}, {
"duration": 1.0,
"texture": ExtResource("7_dphoa")
}, {
"duration": 1.0,
"texture": ExtResource("8_o3f04")
}],
"loop": true,
"name": &"selected",
"speed": 6.0
}]

[node name="HUD_Score" type="Panel"]
custom_minimum_size = Vector2(1080, 200)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_gdpn7")
script = ExtResource("1_rr63v")

[node name="Shield_1" type="TextureRect" parent="."]
z_index = 3
layout_mode = 2
offset_left = 9.0
offset_top = -46.0
offset_right = 259.0
offset_bottom = 204.0
size_flags_horizontal = 4
texture = ExtResource("2_5ag4x")
expand_mode = 3

[node name="Highlight_1" type="AnimatedSprite2D" parent="Shield_1"]
z_index = 3
position = Vector2(122.5, -49.8865)
rotation = -1.5708
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_fp750")
animation = &"selected"
frame_progress = 0.515066

[node name="FireRing" type="Node2D" parent="Shield_1/Highlight_1"]
position = Vector2(-35, 0.1)
rotation = 1.5708
scale = Vector2(0.4, 0.4)
script = ExtResource("9_vychm")

[node name="RingSprite" type="ColorRect" parent="Shield_1/Highlight_1/FireRing"]
z_index = 102
material = ExtResource("10_4x2ij")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Shield_2" type="TextureRect" parent="."]
z_index = 3
layout_mode = 2
offset_left = 820.0
offset_top = -45.0
offset_right = 1070.0
offset_bottom = 205.0
scale = Vector2(0.967069, 1.00701)
texture = ExtResource("2_5ag4x")
expand_mode = 3

[node name="Highlight_2" type="AnimatedSprite2D" parent="Shield_2"]
z_index = 3
position = Vector2(122.535, -49.8176)
rotation = -1.5708
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_fp750")
animation = &"selected"
frame_progress = 0.21824

[node name="FireRing" type="Node2D" parent="Shield_2/Highlight_2"]
modulate = Color(0.533333, 1, 1, 1)
position = Vector2(-35, 0)
rotation = 1.5708
scale = Vector2(0.4, 0.4)
script = ExtResource("9_vychm")

[node name="RingSprite" type="ColorRect" parent="Shield_2/Highlight_2/FireRing"]
z_index = 102
material = ExtResource("10_4x2ij")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
z_as_relative = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -303.0
offset_top = 10.0
offset_right = 315.0
offset_bottom = 110.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ScoreLabel_Left" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_rr63v")
theme_override_font_sizes/font_size = 100
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HUD_Timer" parent="HBoxContainer" instance=ExtResource("4_emhmn")]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
size_flags_vertical = 8

[node name="ScoreLabel_Right" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_rr63v")
theme_override_font_sizes/font_size = 100
text = "00"
horizontal_alignment = 1
vertical_alignment = 1
